# Prime-Number-Finder

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Utils.cpp  utils.cpp
app/src/main/cpp/EasyTasks/: CMakeLists.txt
app/src/main/cpp/include/: debug_listener.h  find_primes_task.h  multithreaded_task.h  task.h  task_listener.h
app/src/main/cpp/source/: find_primes_native_task.cpp  native_task.cpp  utils.cpp
app/src/main/res/anim/: fade_out.xml  popup_window_enter.xml  popup_window_exit.xml  slide_out.xml
app/src/main/res/color/: button_color.xml  default_button_tint_color_state_list.xml  delete_button_tint_color_state_list.xml  text_color.xml  valid_edittext_background.xml
app/src/main/res/drawable/: circle_white.xml  circular.xml  cursor.xml  find_primes_task_list_item_background.xml  ic_arrow_down.xml  ic_arrow_up.xml  ic_file.xml  ic_publish.xml  ic_sort.xml  line.xml  number_input_background.xml  option_background.xml  prime_factorization_task_list_item_background.xml  progress.xml  progress_background.xml  ripple_clear.xml  round_check_24.xml  round_clear_24.xml  round_date_range_24.xml  round_rectangle_white.xml  selectable_item_background.xml  selected_item_background.xml  task_list_item_background.xml  thumb.xml  thumb_drawable.xml  wing_button_left.xml  wing_button_right.xml
app/src/main/res/drawable-mdpi/: navigation_drawer_item_background.xml
app/src/main/res/layout/: about_page_fragment.xml  activity_display_list.xml  activity_display_prime_factorization.xml  activity_list_files.xml  activity_main.xml  advanced_button.xml  app_bar.xml  bottom_sheet_primes.xml  card_view_saved_files.xml  card_view_saved_files_test.xml  changelog_activity.xml  changelog_list_item.xml  check_primality_results_fragment.xml  check_primality_statistics_fragment.xml  checkbox_option.xml  collapsing_app_bar.xml  color_option.xml  dialog_loading.xml  display_factors_activity.xml  display_prime_factorization_activity.xml  display_primes_activity.xml  export_options_dialog.xml  factor_tree_export_options_activity.xml  factors_item.xml  factors_list_item.xml  find_factors_configuration_activity.xml  find_factors_configuration_fragment.xml  find_factors_fragment.xml  find_factors_results_fragment.xml  find_factors_statistics_fragment.xml  find_factors_task_list_fragment.xml  find_factors_task_list_item.xml  find_nth_number_dialog.xml  find_primes_configuration_activity.xml  find_primes_configuration_fragment.xml  find_primes_fragment.xml  find_primes_results_fragment.xml  find_primes_statistics_fragment.xml  find_primes_task_list_fragment.xml  find_primes_task_list_item.xml  (+58 more)
app/src/main/res/menu/: display_content_activity_menu.xml  drawer.xml  main.xml  saved_files_activity_menu.xml  (+1 more)
media/: app_icon.xcf  (+4 more)
(+226 files in other folders)
